# ConsolePi

./: .gitignore  .readthedocs.yaml  .static.yaml  CNAME  ConsolePi.cloud  ConsolePi.conf.example  ConsolePi.sh  ConsolePi.yaml.example  ConsolePi_API.py  LICENSE  README.md  adapters.md  banner  changelog.md  dhcpcd.exit-hook  install.sh  power.json.example  pyproject.toml  relay.json.example
cloud/gdrive/: cloud.py  gdrive.py
cloud/gdrive/headless-auth/: README
cloud/gdrive/include/: utils.py
customizations/: README  rfcomm.service_raw
dnsmasq.d/: .gitignore  README
docs/: conf.py  index.rst  readme.md  requirements.txt
installer/: ConsolePi_image_creator.sh  common.sh  config.sh  consolepi-image-creator.conf  consolepi-image-creator.sh  install.conf.example  install.sh  install2.sh  requirements-full.txt  requirements-legacy.txt  requirements.txt  ssids.sh  udev.sh  update.sh  utilities.sh
overrides/: README
readme_content/: ConsolePi - Manual Installation.md  gdrive.md  motd-news  power.md  ztp.md
src/: 010-speedtest.conf  02-consolepi  10-ConsolePi.rules  99-noipv6.conf  ConsolePi.logrotate  ConsolePi.ovpn.example  ConsolePi_cleanup  ConsolePi_cleanup.sh  autohotspotN  bluemenu.sh  btconnect.sh  byobu-ztp-watcher.sh  cleanup.sh  consolepi-addconsole.sh  consolepi-addrelay.sh  consolepi-addssids.sh  consolepi-api.py  consolepi-api.service  consolepi-autohotspot.cron  consolepi-details.py  consolepi-lldpd.conf  consolepi-mdns.service  consolepi-menu  consolepi-menu-dev.py  consolepi-menu.py  consolepi-menu.sh  consolepi-remotes.py  consolepi-wlanreset.sh  consolepi.service  consolepi.sh  convert-ser2net.py  dhcp-trigger.py  dhcpcd.conf  dhcpcd.exit-hook  gpiofan.py  hostapd  j2render.py  mdns_browser.py  mdns_register.py  openvpn.conf  (+8 more)
src/PyConsolePi/: __init__.py  common.py  dlirest.py  gdrive.py  mdns_discovery.py  power.py  relay.py
src/consolepi-commands/: consolepi-addconsole  consolepi-addssids  consolepi-autohotspot  consolepi-browse  consolepi-btconnect  consolepi-btoff  consolepi-bton  consolepi-checkpower  consolepi-config  consolepi-convert  consolepi-details  consolepi-editudev  consolepi-extras  consolepi-help  consolepi-image  consolepi-killvpn  consolepi-leases  consolepi-logs  consolepi-mdns  consolepi-menu  consolepi-pbtest  consolepi-py  consolepi-relays  consolepi-remotes  consolepi-resetudev  consolepi-showaliases  consolepi-startvpn  consolepi-status  consolepi-sync  consolepi-testhotspot  consolepi-upgrade  consolepi-version  consolepi-wlanreset  consolepi-wlanscan  consolepi-ztp
src/j2/: 01-consolepi.conf.j2  01-consolepi.j2  bluetooth.service.j2  dhcp.nmconnection.j2  dhcpcd.conf.j2  dnsmasq.conf.j2  dnsmasq.eth0.j2  dnsmasq.wlan0.j2  hostapd.conf.j2  hosts.j2  hotspot.j2  hotspot.nmconnection.j2  static.nmconnection.j2
src/override/: .gitignore  README
src/pypkg/consolepi/: __init__.py  config.py  consolepi.py  exec.py  gdrive.py  local.py  menu-dev.py  menu.py  menu_dev.py  models.py  remotes.py  udevrename.py  utils.py
src/pypkg/consolepi/power/: __init__.py  dlirest.py  outlets.py
src/systemd/: ConsolePi_cleanup  autohotspot.service  bluetooth.service  bthelper@.service  consolepi-api-flask.service  consolepi-api.service  consolepi-autohotspot-dhcp.service  consolepi-cleanup.service  consolepi-gpiofan.service  consolepi-mdns.service  consolepi-mdnsbrowse.service  consolepi-mdnsreg.service  consolepi-webconsole.service  consolepi-wired-dhcp  consolepi-wired-dhcp.service  ovpn-graceful-shutdown.service  rfcomm.service  ser2net.init
tests/: outlets.py
ztp/: .gitignore  README
ztp-custom-parsers/: parsers.py.example
ztp/custom-parsers/: .gitignore  parsers.py.example
